--- a/css/styles.css
+++ b/css/styles.css
@@ -22,12 +22,7 @@ p, h1, h2, h3, h4, h5, h6, ul {
     margin-top: 0;
     margin-bottom: 0;
 }
-/* .container {
-    width: 100%;
-    max-width: 1158px;
-    margin: 0 auto;
-    padding: 0 15px;
-} */
+
 ul {
     list-style-type: none;
     font-style: normal;
@@ -88,7 +83,6 @@ img {
     .header-container-desktop {
         display: flex;
         align-items: center;
-        gap: 40px;
     }
 }
 
@@ -120,13 +114,13 @@ img {
 }
 
 .contacts-menu {
+    display: flex;
     flex-direction: column;
-    gap: 0;
+    gap: 12px;
 }
 
 @media (min-width: 1158px) {
     .contacts-menu {
-        display: flex;
         flex-direction: row;
         gap: 40px;
     }
@@ -186,7 +180,6 @@ img {
     text-decoration: none;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    padding: 6px 0;
     display: block;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -206,7 +199,6 @@ img {
     text-decoration: none;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    padding: 6px 0;
     display: block;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -271,10 +263,6 @@ img {
     max-width: 428px;
     width: 100%;
     margin: 0 auto;
-    /* 
-    align-content: space-between;
-    
-    flex-wrap: wrap; */
 }
 .mobile-nav {
     margin-top: 0;
@@ -295,9 +283,6 @@ img {
 }
 .mobile-nav-link:hover, .mobile-nav-link:focus {
     color: var(--color-button-action);
-}
-.mobile-contacts-menu {
-    margin-bottom: 48px;
 }
 .mobile-contacts-menu li:first-child {
     margin-bottom: 40px;
@@ -322,6 +307,9 @@ img {
     letter-spacing: 0.02em;
     color: var(--color-primary);
     text-decoration: none;
+}
+.mobile-social-media {
+    margin-top: 48px;
 }
 .mobile-socials-list {
     display: flex;
@@ -449,16 +437,7 @@ img {
     background-color: var(--color-button-action);
     color: var(--color-light);
 }
-.section-second {
-    padding-top: 96px;
-    padding-bottom: 96px;
-}
-@media screen and (min-width: 1158px) {
-    .section-second {
-            padding-top: 120px;
-            padding-bottom: 0;
-    }
-}
+
 .section {
     padding: 96px 0;
 }
@@ -567,6 +546,7 @@ img {
 @media screen and (min-width: 1158px) {
     .what-are-we-doing {
         display: block;
+        padding-bottom: 120px;
     }
 }
 .section-headings {
@@ -752,6 +732,8 @@ img {
     letter-spacing: 0.02em;
     margin-top: 16px;
     width: 264px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .logo-web {
     color: var(--color-button-logo);
@@ -763,12 +745,20 @@ img {
     font-size: 18px;
     line-height: 1.33;
 }
+@media screen and (max-width: 767px) {
+    .logo-web {
+        text-align: center;
+    }
+}
 /* .footer-container {
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 } */
 @media screen and (min-width: 768px) and (max-width: 1157px) {
     .footer-container {
-        padding-left: 108px;;
+        width: 582px;
     }
 }
 @media screen and (min-width: 1158px) {
@@ -787,10 +777,13 @@ img {
 @media screen and (min-width: 1158px) {
     .logo-social-container {
         margin-bottom: 0;
+        margin-right: 80px;
     }
 }
 .footer-left-container {
     margin-bottom: 72px;
+    display: flex;
+    flex-direction: column;
 }
 @media screen and (min-width: 768px) {
     .footer-left-container {
@@ -803,19 +796,23 @@ img {
         margin-right: 120px;
     }
 }
-.footer-social-media {
-    margin-right: 80px;
-}
 .social-media {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--color-button-logo-light);
     margin-bottom: 16px;
+    text-align: center;
+}
+@media screen and (min-width: 768px) {
+    .social-media {
+        text-align: left;
+    }
 }
 .footer-socials-list {
     display: flex;
     gap: 16px;
+    justify-content: center;
 }
 
 .footer-socials-item {
@@ -829,7 +826,8 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgba(255, 255, 255, 0.1);;
+    /* background-color: rgba(255, 255, 255, 0.1); */
+    background-color: var(--color-button-logo);
     border-radius: 50%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1030,9 +1028,7 @@ img {
     left: 50%;
     transform: translate(-50%, -50%);
     max-width: 408px;
-    max-height: 584px;
     width: 100%;
-    height: 100%;
     background-color: var(--color-modal);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
@@ -1215,12 +1211,10 @@ img {
 .icon-man {
     width: 12px;
     height: 12px;
-
 }
 .icon-tel {
     width: 13px;
     height: 13px;
-
 }
 .icon-mail {
     width: 15px;
